--- a/dn0621zay-born-test-v15.css
+++ b/dn0621zay-born-test-v15.css
@@ -118,58 +118,66 @@ a{
     padding-left: 50px;
     transition: 0.5s;
 }
+/*dn0621zay-triangle-arabesque-ai.svg*/
 
 #arab{
     top: 19%;
     left: 79%;
-    background-image: url(https://lp.cloudplatformonline.com/rs/808-GJW-314/images/dn0621zay-triangle-arabesque-ai.svg);
+    background-image: url("data:image/svg+xml;utf8,<svg width='28' height='26' viewBox='0 0 28 26' fill='none' xmlns='http://www.w3.org/2000/svg'><path d='M17.6354 21.6172L0.749702 9.49814L19.688 0.934223L17.6354 21.6172Z' fill='#FBBC04'/></svg>");
     background-position: 22px 2px;
     visibility: hidden;
     width: 120px;
 }
-
+/*dn0621zay-square-spotify.svg*/
 #spotify{    
     top: 22%;
     left: 16%;
-    background-image: url(https://lp.cloudplatformonline.com/rs/808-GJW-314/images/dn0621zay-square-spotify.svg);
+    background-image: url("data:image/svg+xml;utf8,<svg width='16' height='17' viewBox='0 0 16 17' fill='none' xmlns='http://www.w3.org/2000/svg'><rect y='16.5566' width='16' height='16' transform='rotate(-90 0 16.5566)' fill='#1E8E3E'/></svg>");
     background-position: 25px 4px;
     visibility: hidden;
 
 }
+/*dn0621zay-polygon-justeat.svg*/
 #justeat{
     top: 51%;
     left: 9%;
-    background-image: url(https://lp.cloudplatformonline.com/rs/808-GJW-314/images/dn0621zay-polygon-justeat.svg);
+    background-image: url("data:image/svg+xml;utf8,<svg width='32' height='32' viewBox='0 0 32 32' fill='none' xmlns='http://www.w3.org/2000/svg'><path d='M22.8038 7.33194L26.7722 20.8691L15.1239 28.8265L3.95648 20.2073L8.7029 6.92292L22.8038 7.33194Z' fill='#4285F4'/></svg>");
     background-position: 17px -4px;
     visibility: hidden;
 
 }
+/*dn0621zay-diamond-zulily.svg*/
 #zulily{
     top: 56%;
     left: 86%;
-    background-image: url(https://lp.cloudplatformonline.com/rs/808-GJW-314/images/dn0621zay-diamond-zulily.svg);
+    background-image: url("data:image/svg+xml;utf8,<svg width='23' height='24' viewBox='0 0 23 24' fill='none' xmlns='http://www.w3.org/2000/svg'><rect y='12' width='16' height='16' transform='rotate(-45 0 12)' fill='#1A73E8'/></svg>");
     visibility: hidden;
 
 }
+/*dn0621zay-triangle-paypal.svg*/
 #paypal{
     top: 75%;
     left: 20%;
-    background-image: url(https://lp.cloudplatformonline.com/rs/808-GJW-314/images/dn0621zay-triangle-paypal.svg);
+    background-image: url("data:image/svg+xml;utf8,<svg width='28' height='28' viewBox='0 0 28 28' fill='none' xmlns='http://www.w3.org/2000/svg'><path d='M20.515 20.4843L0.438573 15.1049L15.1355 0.407914L20.515 20.4843Z' fill='#EA4335'/></svg>");
+
     background-position: 22px 3px;
     visibility: hidden;
 }
+/*dn0621zay-circle-brandfolder.svg*/
 #brandfolder{
     top: 80%;
     left: 79%;
-    background-image: url(https://lp.cloudplatformonline.com/rs/808-GJW-314/images/dn0621zay-circle-brandfolder.svg);
+    background-image: url("data:image/svg+xml;utf8,<svg width='16' height='16' viewBox='0 0 16 16' fill='none' xmlns='http://www.w3.org/2000/svg'><circle cx='8' cy='8' r='8' fill='#FBBC04'/></svg>");
     background-position: 27px 5px;
     visibility: hidden;
 
 }
+/*dn0621zay-square-ticket.svg*/
 #ticket{
     top: 86%;
     left: 13%;
-    background-image: url(https://lp.cloudplatformonline.com/rs/808-GJW-314/images/dn0621zay-square-ticket.svg);
+    background-image: url("data:image/svg+xml;utf8,<svg width='16' height='17' viewBox='0 0 16 17' fill='none' xmlns='http://www.w3.org/2000/svg'><rect y='16.5566' width='16' height='16' transform='rotate(-90 0 16.5566)' fill='#FBBC04'/></svg>");
+
     background-position: 23px 4px;
     visibility: hidden;
 
@@ -199,8 +207,9 @@ a{
 .casestudy-text-container h2 span{
     font-weight: normal;
 }
+/*dn0621zay-download-guide-circle.svg*/
 .casestudy-text-container .download-container {
-    background-image: url(https://lp.cloudplatformonline.com/rs/808-GJW-314/images/dn0621zay-download-guide-circle.svg);
+    background-image: url("data:image/svg+xml;utf8,<svg width='466' height='466' viewBox='0 0 466 466' fill='none' xmlns='http://www.w3.org/2000/svg'><circle cx='233' cy='233' r='233' fill='#4285F4'/></svg>");
     background-repeat: no-repeat;
     background-position-x: 50%;
     background-position-y: 0%;
@@ -561,6 +570,7 @@ a{
     color: #ffffff;
 }
 
+/*dn0621zay-round-continue-button.svg*/
 .progress-container .next,
 .progress-container .un-next {
     bottom: -5px;
@@ -977,6 +987,7 @@ border-color: transparent !important;
         padding: 15px 40px 15px 24px;
         position: relative;
     }
+    /*dn0621zay-arrow-forward.svg*/
     .four .text-container a.next::after,
     .six .text-container a.next::after,
     .eight .text-container a.next::after,
@@ -987,7 +998,7 @@ border-color: transparent !important;
     .questions-container a.next::after,
     .questions-container .un-next::after {
         content: "";
-        background-image: url(https://lp.cloudplatformonline.com/rs/808-GJW-314/images/dn0621zay-arrow-forward.svg);
+        background-image: url("data:image/svg+xml;utf8,<svg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'><path d='M12 4L10.59 5.41L16.17 11H4V13H16.17L10.59 18.59L12 20L20 12L12 4Z' fill='white'/></svg>");
         background-repeat: no-repeat;
         background-position-x: 0%;
         background-position-y: 0%;
@@ -1059,9 +1070,10 @@ border-color: transparent !important;
     font-weight: 700;
     color: #669DF6;
 }
-
+/*dn0621zay-button-short-static.svg*/
 .one .text-container .start-btn a{
-    background-image: url(https://lp.cloudplatformonline.com/rs/808-GJW-314/images/dn0621zay-button-short-static.svg);
+    background-image: url("data:image/svg+xml;utf8,<svg width='135' height='48' viewBox='0 0 135 48' fill='none' xmlns='http://www.w3.org/2000/svg'><rect width='135' height='48' fill='#202124'/><line opacity='0.8' x1='5.5' y1='48' x2='5.5' y2='-1.90443e-08' stroke='#4285F4'/><line opacity='0.8' x1='128.5' y1='48' x2='128.5' y2='1.90443e-08' stroke='#4285F4'/><line opacity='0.8' x1='135' y1='42.5' y2='42.5' stroke='#4285F4'/><line opacity='0.8' x1='135' y1='6.5' y2='6.5' stroke='#4285F4'/</svg>");
+
     color: #ffffff;
     font-family: 'Google Sans';
     font-style: normal;
@@ -1073,9 +1085,10 @@ border-color: transparent !important;
     text-align: center;
     transition:0.2s;
 }
+/* dn0621zay-button-short-rollover.svg */
 .one .text-container .start-btn a:hover,
 .one .text-container .start-btn a:active{
-    background-image: url(https://lp.cloudplatformonline.com/rs/808-GJW-314/images/dn0621zay-button-short-rollover.svg);
+    background-image: url("data:image/svg+xml;utf8,<svg width='135' height='48' viewBox='0 0 135 48' fill='none' xmlns='http://www.w3.org/2000/svg'><rect width='135' height='48' fill='#202124'/><rect opacity='0.2' x='6' y='6' width='123' height='36' fill='#1A73E8'/><line x1='5.5' y1='43' x2='5.5' y2='6' stroke='#669DF6'/><line x1='128.5' y1='43' x2='128.5' y2='6' stroke='#669DF6'/><line x1='128' y1='42.5' x2='6' y2='42.5' stroke='#669DF6'/><line x1='128' y1='6.5' x2='6' y2='6.5' stroke='#669DF6'/></svg>");
     transition:0.2s;
 }
 /*
@@ -1237,8 +1250,9 @@ font-weight: normal;
 font-size: 24px;
 line-height: 29px;
 }
+/* dn0621zay-button-short-static.svg */
 .two .text-container .next {
-    background-image: url(https://lp.cloudplatformonline.com/rs/808-GJW-314/images/dn0621zay-button-short-static.svg);
+    background-image: url("data:image/svg+xml;utf8,<svg width='135' height='48' viewBox='0 0 135 48' fill='none' xmlns='http://www.w3.org/2000/svg'><rect width='135' height='48' fill='#202124'/><line opacity='0.8' x1='5.5' y1='48' x2='5.5' y2='-1.90443e-08' stroke='#4285F4'/><line opacity='0.8' x1='128.5' y1='48' x2='128.5' y2='1.90443e-08' stroke='#4285F4'/><line opacity='0.8' x1='135' y1='42.5' y2='42.5' stroke='#4285F4'/><line opacity='0.8' x1='135' y1='6.5' y2='6.5' stroke='#4285F4'/></svg>");
     color: #ffffff;
     font-family: 'Google Sans';
     font-style: normal;
@@ -1251,9 +1265,10 @@ line-height: 29px;
     transition:0.2s;
 }
 
+/* dn0621zay-button-short-rollover.svg */
 .two .text-container .next:hover,
 .two .text-container .next:active{
-    background-image: url(https://lp.cloudplatformonline.com/rs/808-GJW-314/images/dn0621zay-button-short-rollover.svg);
+    background-image:url("data:image/svg+xml;utf8,<svg width='135' height='48' viewBox='0 0 135 48' fill='none' xmlns='http://www.w3.org/2000/svg'><rect width='135' height='48' fill='#202124'/><rect opacity='0.2' x='6' y='6' width='123' height='36' fill='#1A73E8'/><line x1='5.5' y1='43' x2='5.5' y2='6' stroke='#669DF6'/><line x1='128.5' y1='43' x2='128.5' y2='6' stroke='#669DF6'/><line x1='128' y1='42.5' x2='6' y2='42.5' stroke='#669DF6'/><line x1='128' y1='6.5' x2='6' y2='6.5' stroke='#669DF6'/></svg>");
     transition:0.2s;
 }
 
@@ -2563,8 +2578,9 @@ line-height: 29px;
     width: 56%;
 }
 
+/* dn0621zay-question4-draggable-icon.svg */
 .nine #columns .column { 
-    background-image: url(https://lp.cloudplatformonline.com/rs/808-GJW-314/images/dn0621zay-question4-draggable-icon.svg);
+    background-image: url("data:image/svg+xml;utf8,<svg width='18' height='10' viewBox='0 0 18 10' fill='none' xmlns='http://www.w3.org/2000/svg'><line y1='1' x2='16' y2='1' stroke='#C5221F' stroke-width='2'/><line y1='8' x2='16' y2='8' stroke='#C5221F' stroke-width='2'/></svg>");
     background-position-x: 94%;
     background-position-y: 50%;
     background-repeat: no-repeat;
@@ -4359,8 +4375,9 @@ line-height: 29px;
     display:none;
 }
 
+/* dn0621zay-button-static-find-out.svg */
 .Seventeen .solution-container .findOut {
-    background-image: url(https://lp.cloudplatformonline.com/rs/808-GJW-314/images/dn0621zay-button-static-find-out.svg);
+    background-image: url("data:image/svg+xml;utf8,<svg width='165' height='48' viewBox='0 0 165 48' fill='none' xmlns='http://www.w3.org/2000/svg'><line opacity='0.8' x1='5.5' y1='48' x2='5.5' y2='-1.90443e-08' stroke='#4285F4'/><line opacity='0.8' x1='158.5' y1='48' x2='158.5' y2='1.90443e-08' stroke='#4285F4'/><line opacity='0.8' x1='165' y1='42.5' y2='42.5' stroke='#4285F4'/><line opacity='0.8' x1='165' y1='6.5' y2='6.5' stroke='#4285F4'/></svg>");
     color: #ffffff;
     display: inline-block;
     font-family: 'Google Sans';
@@ -4374,14 +4391,17 @@ line-height: 29px;
     text-align: center;
     transition: 0.2s;
 }
+/* dn0621zay-button-hover-find-out.svg */
 .Seventeen .solution-container .findOut:hover,
 .Seventeen .solution-container .findOut:active{
-    background-image: url(https://lp.cloudplatformonline.com/rs/808-GJW-314/images/dn0621zay-button-hover-find-out.svg);
+    background-image: url("data:image/svg+xml;utf8,<svg width='165' height='48' viewBox='0 0 165 48' fill='none' xmlns='http://www.w3.org/2000/svg'><rect opacity='0.2' x='5' y='6' width='154' height='36' fill='#1A73E8'/><line x1='5.5' y1='42' x2='5.5' y2='6' stroke='#8AB4F8'/><line x1='158.5' y1='42' x2='158.5' y2='6' stroke='#8AB4F8'/><line x1='159' y1='42.5' x2='5' y2='42.5' stroke='#8AB4F8'/><line x1='159' y1='6.5' x2='5' y2='6.5' stroke='#8AB4F8'/></svg>");
+
     transition: 0.2s;
 }
 
+/* dn0621zay-retake-assessment-dt-static.svg */
 .Seventeen .casestudy-link-container .retake {
-    background-image: url(https://lp.cloudplatformonline.com/rs/808-GJW-314/images/dn0621zay-retake-assessment-dt-static.svg);
+    background-image: url("data:image/svg+xml;utf8,<svg width='182' height='48' viewBox='0 0 182 48' fill='none' xmlns='http://www.w3.org/2000/svg'><line opacity='0.8' x1='5.5' y1='48' x2='5.5' y2='-1.90443e-08' stroke='#4285F4'/><line opacity='0.8' x1='175.5' y1='48' x2='175.5' y2='1.90443e-08' stroke='#4285F4'/><line opacity='0.8' x1='182' y1='42.5' y2='42.5' stroke='#4285F4'/><line opacity='0.8' x1='182' y1='6.5' y2='6.5' stroke='#4285F4'/></svg>");
     color: #ffffff;
     display: inline-block;
     font-family: 'Google Sans';
@@ -4398,9 +4418,10 @@ line-height: 29px;
     right: 6%;
     transition: 0.2s;
 }
+/* dn0621zay-retake-assessment-dt-hover.svg */
 .Seventeen .casestudy-link-container .retake:hover,
 .Seventeen .casestudy-link-container .retake:active{
-    background-image: url(https://lp.cloudplatformonline.com/rs/808-GJW-314/images/dn0621zay-retake-assessment-dt-hover.svg);
+    background-image: url("data:image/svg+xml;utf8,<svg width='182' height='48' viewBox='0 0 182 48' fill='none' xmlns='http://www.w3.org/2000/svg'><rect opacity='0.2' x='5' y='6' width='171' height='36' fill='#1A73E8'/><line x1='6.5' y1='42' x2='6.5' y2='6' stroke='#8AB4F8'/><line x1='175.5' y1='42' x2='175.5' y2='6' stroke='#8AB4F8'/><line x1='176' y1='42.5' x2='6' y2='42.5' stroke='#8AB4F8'/><line x1='176' y1='6.5' x2='6' y2='6.5' stroke='#8AB4F8'/></svg>");
     transition: 0.2s;
 }
 
@@ -4525,8 +4546,9 @@ line-height: 29px;
         display: none;
     }
 
+    /* dn0621zay-mobile-cta-container.svg */
     .Seventeen .casestudy-text-container .download-container {
-        background-image: url(https://lp.cloudplatformonline.com/rs/808-GJW-314/images/dn0621zay-mobile-cta-container.svg);
+        background-image: url("data:image/svg+xml;utf8,<svg width='299' height='100' viewBox='0 0 299 100' fill='none' xmlns='http://www.w3.org/2000/svg'><path d='M-10 0H199C254.228 0 299 44.7715 299 100V100H-10V0Z' fill='#1A73E8'/></svg>");
         background-repeat: no-repeat;
         background-position-x: 0%;
         background-position-y: 14%;
@@ -4609,8 +4631,9 @@ line-height: 29px;
         left: 16%;
     }
 
+    /* dn0621zay-replay-button-mobile.svg */
     .Seventeen .casestudy-link-container .retake {
-        background-image: url(https://lp.cloudplatformonline.com/rs/808-GJW-314/images/dn0621zay-replay-button-mobile.svg);
+        background-image: url("data:image/svg+xml;utf8,<svg width='48' height='48' viewBox='0 0 48 48' fill='none' xmlns='http://www.w3.org/2000/svg'><circle cx='24' cy='24' r='24' fill='#185ABC'/><path d='M29.65 18.35C28.2 16.9 26.21 16 24 16C19.58 16 16.01 19.58 16.01 24C16.01 28.42 19.58 32 24 32C27.73 32 30.84 29.45 31.73 26H29.65C28.83 28.33 26.61 30 24 30C20.69 30 18 27.31 18 24C18 20.69 20.69 18 24 18C25.66 18 27.14 18.69 28.22 19.78L25 23H32V16L29.65 18.35Z' fill='white'/></svg>");
         background-repeat: no-repeat;
         bottom: 15%;
         top: initial;
