--- a/dn0621zay-born-test-v15.css
+++ b/dn0621zay-born-test-v15.css
@@ -119,60 +119,62 @@ a{
     transition: 0.5s;
 }
 
-#arab{
+#arab {
     top: 19%;
     left: 79%;
-    background-image: url(https://lp.cloudplatformonline.com/rs/808-GJW-314/images/dn0621zay-triangle-arabesque-ai.svg);
+    /*background-image: url(dn0621zay-triangle-arabesque-ai.svg);*/
+    background-image: url("data:image/svg+xml,%3Csvg width='28' height='26' viewBox='0 0 28 26' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M17.6354 21.6172L0.749702 9.49814L19.688 0.934223L17.6354 21.6172Z' fill='%23FBBC04'/%3E%3C/svg%3E%0A");
     background-position: 22px 2px;
     visibility: hidden;
     width: 120px;
 }
 
-#spotify{    
+#spotify {
     top: 22%;
     left: 16%;
-    background-image: url(https://lp.cloudplatformonline.com/rs/808-GJW-314/images/dn0621zay-square-spotify.svg);
+    /*background-image: url(dn0621zay-square-spotify.svg);*/
+    background-image: url("data:image/svg+xml,%3Csvg width='16' height='17' viewBox='0 0 16 17' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect y='16.5566' width='16' height='16' transform='rotate(-90 0 16.5566)' fill='%231E8E3E'/%3E%3C/svg%3E%0A");
     background-position: 25px 4px;
     visibility: hidden;
-
 }
-#justeat{
+#justeat {
     top: 51%;
     left: 9%;
-    background-image: url(https://lp.cloudplatformonline.com/rs/808-GJW-314/images/dn0621zay-polygon-justeat.svg);
+    /*background-image: url(dn0621zay-polygon-justeat.svg);*/
+    background-image: url("data:image/svg+xml,%3Csvg width='32' height='32' viewBox='0 0 32 32' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M22.8038 7.33194L26.7722 20.8691L15.1239 28.8265L3.95648 20.2073L8.7029 6.92292L22.8038 7.33194Z' fill='%234285F4'/%3E%3C/svg%3E%0A");
     background-position: 17px -4px;
     visibility: hidden;
-
 }
-#zulily{
+#zulily {
     top: 56%;
     left: 86%;
-    background-image: url(https://lp.cloudplatformonline.com/rs/808-GJW-314/images/dn0621zay-diamond-zulily.svg);
+    /*background-image: url(dn0621zay-diamond-zulily.svg);*/
+    background-image: url("data:image/svg+xml,%3Csvg width='23' height='24' viewBox='0 0 23 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect y='12' width='16' height='16' transform='rotate(-45 0 12)' fill='%231A73E8'/%3E%3C/svg%3E%0A");
     visibility: hidden;
-
 }
-#paypal{
+#paypal {
     top: 75%;
     left: 20%;
-    background-image: url(https://lp.cloudplatformonline.com/rs/808-GJW-314/images/dn0621zay-triangle-paypal.svg);
+    /*background-image: url(dn0621zay-triangle-paypal.svg);*/
+    background-image: url("data:image/svg+xml,%3Csvg width='28' height='28' viewBox='0 0 28 28' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M20.515 20.4843L0.438573 15.1049L15.1355 0.407914L20.515 20.4843Z' fill='%23EA4335'/%3E%3C/svg%3E%0A");
     background-position: 22px 3px;
     visibility: hidden;
 }
-#brandfolder{
+#brandfolder {
     top: 80%;
     left: 79%;
-    background-image: url(https://lp.cloudplatformonline.com/rs/808-GJW-314/images/dn0621zay-circle-brandfolder.svg);
+    /*background-image: url(dn0621zay-circle-brandfolder.svg);*/
+    background-image: url("data:image/svg+xml,%3Csvg width='16' height='16' viewBox='0 0 16 16' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle cx='8' cy='8' r='8' fill='%23FBBC04'/%3E%3C/svg%3E%0A");
     background-position: 27px 5px;
     visibility: hidden;
-
 }
-#ticket{
+#ticket {
     top: 86%;
     left: 13%;
-    background-image: url(https://lp.cloudplatformonline.com/rs/808-GJW-314/images/dn0621zay-square-ticket.svg);
+    /*background-image: url(dn0621zay-square-ticket.svg);*/
+    background-image: url("data:image/svg+xml,%3Csvg width='16' height='17' viewBox='0 0 16 17' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect y='16.5566' width='16' height='16' transform='rotate(-90 0 16.5566)' fill='%23FBBC04'/%3E%3C/svg%3E%0A");
     background-position: 23px 4px;
     visibility: hidden;
-
 }
 
 .casestudy-text-container{
@@ -200,7 +202,8 @@ a{
     font-weight: normal;
 }
 .casestudy-text-container .download-container {
-    background-image: url(https://lp.cloudplatformonline.com/rs/808-GJW-314/images/dn0621zay-download-guide-circle.svg);
+    /*background-image: url(dn0621zay-download-guide-circle.svg);*/
+    background-image: url("data:image/svg+xml,%3Csvg width='466' height='466' viewBox='0 0 466 466' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle cx='233' cy='233' r='233' fill='%234285F4'/%3E%3C/svg%3E%0A");
     background-repeat: no-repeat;
     background-position-x: 50%;
     background-position-y: 0%;
@@ -230,8 +233,9 @@ a{
     width: 30%;
     margin: 0 auto 16px;
 }
-.casestudy-text-container .download-container img {
+.casestudy-text-container .download-container svg {
     margin-bottom: -26px;
+    height: auto;
 }
 
 .casestudy-text-popup-container{
@@ -305,9 +309,10 @@ a{
     /*transition: 0.5s;*/
 }
 
-.header-container img{  
+.header-container svg{  
     margin: 51px 64px 0;
     width: 131px;
+    height: auto;
 }
 
 .header-container h2{  
@@ -574,7 +579,8 @@ a{
     letter-spacing: 0.4px;
     line-height: 16px;
     margin-bottom: 5px;
-    mask: url(https://lp.cloudplatformonline.com/rs/808-GJW-314/images/dn0621zay-round-continue-button.svg) no-repeat 50% 50%;
+    /*mask: url(dn0621zay-round-continue-button.svg) no-repeat 50% 50%;*/
+    mask: url("data:image/svg+xml,%3Csvg width='192' height='192' viewBox='0 0 192 192' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle opacity='0.8' cx='96' cy='96' r='96' fill='white'/%3E%3C/svg%3E%0A") no-repeat 50% 50%;
     overflow: hidden;
     padding-right: 25px;
     padding-top: 100px;
@@ -582,7 +588,8 @@ a{
     right: 0;  
     width: 180px;
     text-align: right;
-    -webkit-mask:  url(https://lp.cloudplatformonline.com/rs/808-GJW-314/images/dn0621zay-round-continue-button.svg) no-repeat 50% 50%;
+    /*-webkit-mask:  url(dn0621zay-round-continue-button.svg) no-repeat 50% 50%;*/
+    -webkit-mask: url("data:image/svg+xml,%3Csvg width='192' height='192' viewBox='0 0 192 192' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle opacity='0.8' cx='96' cy='96' r='96' fill='white'/%3E%3C/svg%3E%0A") no-repeat 50% 50%;
     mask-position: 53px 44px;
     -webkit-mask-position: 53px 44px;
     mask-size: 205px 180px;
@@ -885,7 +892,7 @@ border-color: transparent !important;
     }
 
 
-    .header-container img {
+    .header-container svg {
         margin: 20px 10px 0;
     }
 
@@ -987,7 +994,8 @@ border-color: transparent !important;
     .questions-container a.next::after,
     .questions-container .un-next::after {
         content: "";
-        background-image: url(https://lp.cloudplatformonline.com/rs/808-GJW-314/images/dn0621zay-arrow-forward.svg);
+        /*background-image: url(dn0621zay-arrow-forward.svg);*/
+        background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M12 4L10.59 5.41L16.17 11H4V13H16.17L10.59 18.59L12 20L20 12L12 4Z' fill='white'/%3E%3C/svg%3E%0A");
         background-repeat: no-repeat;
         background-position-x: 0%;
         background-position-y: 0%;
@@ -1028,7 +1036,7 @@ border-color: transparent !important;
     margin-top: 20vh;
 }
 
-.one .header-container img{  
+.one .header-container svg{  
     margin: 0;
     width: 205px;
 }
@@ -1060,8 +1068,9 @@ border-color: transparent !important;
     color: #669DF6;
 }
 
-.one .text-container .start-btn a{
-    background-image: url(https://lp.cloudplatformonline.com/rs/808-GJW-314/images/dn0621zay-button-short-static.svg);
+.one .text-container .start-btn a {
+    /*background-image: url(dn0621zay-button-short-static.svg);*/
+    background-image: url("data:image/svg+xml,%3Csvg width='135' height='48' viewBox='0 0 135 48' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect width='135' height='48' fill='%23202124'/%3E%3Cline opacity='0.8' x1='5.5' y1='48' x2='5.5' y2='-1.90443e-08' stroke='%234285F4'/%3E%3Cline opacity='0.8' x1='128.5' y1='48' x2='128.5' y2='1.90443e-08' stroke='%234285F4'/%3E%3Cline opacity='0.8' x1='135' y1='42.5' y2='42.5' stroke='%234285F4'/%3E%3Cline opacity='0.8' x1='135' y1='6.5' y2='6.5' stroke='%234285F4'/%3E%3C/svg%3E%0A");
     color: #ffffff;
     font-family: 'Google Sans';
     font-style: normal;
@@ -1071,11 +1080,12 @@ border-color: transparent !important;
     line-height: 16px;
     padding: 14px 25px 15px;
     text-align: center;
-    transition:0.2s;
+    transition: 0.2s;
 }
 .one .text-container .start-btn a:hover,
 .one .text-container .start-btn a:active{
-    background-image: url(https://lp.cloudplatformonline.com/rs/808-GJW-314/images/dn0621zay-button-short-rollover.svg);
+    /*background-image: url(dn0621zay-button-short-rollover.svg);*/
+    background-image: url("data:image/svg+xml,%3Csvg width='135' height='48' viewBox='0 0 135 48' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect width='135' height='48' fill='%23202124'/%3E%3Crect opacity='0.2' x='6' y='6' width='123' height='36' fill='%231A73E8'/%3E%3Cline x1='5.5' y1='43' x2='5.5' y2='6' stroke='%23669DF6'/%3E%3Cline x1='128.5' y1='43' x2='128.5' y2='6' stroke='%23669DF6'/%3E%3Cline x1='128' y1='42.5' x2='6' y2='42.5' stroke='%23669DF6'/%3E%3Cline x1='128' y1='6.5' x2='6' y2='6.5' stroke='%23669DF6'/%3E%3C/svg%3E%0A");
     transition:0.2s;
 }
 /*
@@ -1163,7 +1173,7 @@ border-color: transparent !important;
         margin-bottom: 2.5vh;
     }
    
-    .one .header-container img {
+    .one .header-container svg {
         width: 44%;
     }
 
@@ -1238,7 +1248,8 @@ font-size: 24px;
 line-height: 29px;
 }
 .two .text-container .next {
-    background-image: url(https://lp.cloudplatformonline.com/rs/808-GJW-314/images/dn0621zay-button-short-static.svg);
+    /*background-image: url(dn0621zay-button-short-static.svg);*/
+    background-image: url("data:image/svg+xml,%3Csvg width='135' height='48' viewBox='0 0 135 48' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect width='135' height='48' fill='%23202124'/%3E%3Cline opacity='0.8' x1='5.5' y1='48' x2='5.5' y2='-1.90443e-08' stroke='%234285F4'/%3E%3Cline opacity='0.8' x1='128.5' y1='48' x2='128.5' y2='1.90443e-08' stroke='%234285F4'/%3E%3Cline opacity='0.8' x1='135' y1='42.5' y2='42.5' stroke='%234285F4'/%3E%3Cline opacity='0.8' x1='135' y1='6.5' y2='6.5' stroke='%234285F4'/%3E%3C/svg%3E%0A");
     color: #ffffff;
     font-family: 'Google Sans';
     font-style: normal;
@@ -1253,7 +1264,8 @@ line-height: 29px;
 
 .two .text-container .next:hover,
 .two .text-container .next:active{
-    background-image: url(https://lp.cloudplatformonline.com/rs/808-GJW-314/images/dn0621zay-button-short-rollover.svg);
+    /*background-image: url(dn0621zay-button-short-rollover.svg);*/
+    background-image: url("data:image/svg+xml,%3Csvg width='135' height='48' viewBox='0 0 135 48' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect width='135' height='48' fill='%23202124'/%3E%3Crect opacity='0.2' x='6' y='6' width='123' height='36' fill='%231A73E8'/%3E%3Cline x1='5.5' y1='43' x2='5.5' y2='6' stroke='%23669DF6'/%3E%3Cline x1='128.5' y1='43' x2='128.5' y2='6' stroke='%23669DF6'/%3E%3Cline x1='128' y1='42.5' x2='6' y2='42.5' stroke='%23669DF6'/%3E%3Cline x1='128' y1='6.5' x2='6' y2='6.5' stroke='%23669DF6'/%3E%3C/svg%3E%0A");
     transition:0.2s;
 }
 
@@ -2564,7 +2576,8 @@ line-height: 29px;
 }
 
 .nine #columns .column { 
-    background-image: url(https://lp.cloudplatformonline.com/rs/808-GJW-314/images/dn0621zay-question4-draggable-icon.svg);
+    /*background-image: url(dn0621zay-question4-draggable-icon.svg);*/
+    background-image: url("data:image/svg+xml,%3Csvg width='18' height='10' viewBox='0 0 18 10' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cline y1='1' x2='16' y2='1' stroke='%23C5221F' stroke-width='2'/%3E%3Cline y1='8' x2='16' y2='8' stroke='%23C5221F' stroke-width='2'/%3E%3C/svg%3E%0A");
     background-position-x: 94%;
     background-position-y: 50%;
     background-repeat: no-repeat;
@@ -4360,7 +4373,8 @@ line-height: 29px;
 }
 
 .Seventeen .solution-container .findOut {
-    background-image: url(https://lp.cloudplatformonline.com/rs/808-GJW-314/images/dn0621zay-button-static-find-out.svg);
+    /*background-image: url(dn0621zay-button-static-find-out.svg);*/
+    background-image: url("data:image/svg+xml,%3Csvg width='165' height='48' viewBox='0 0 165 48' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cline opacity='0.8' x1='5.5' y1='48' x2='5.5' y2='-1.90443e-08' stroke='%234285F4'/%3E%3Cline opacity='0.8' x1='158.5' y1='48' x2='158.5' y2='1.90443e-08' stroke='%234285F4'/%3E%3Cline opacity='0.8' x1='165' y1='42.5' y2='42.5' stroke='%234285F4'/%3E%3Cline opacity='0.8' x1='165' y1='6.5' y2='6.5' stroke='%234285F4'/%3E%3C/svg%3E%0A");
     color: #ffffff;
     display: inline-block;
     font-family: 'Google Sans';
@@ -4376,12 +4390,14 @@ line-height: 29px;
 }
 .Seventeen .solution-container .findOut:hover,
 .Seventeen .solution-container .findOut:active{
-    background-image: url(https://lp.cloudplatformonline.com/rs/808-GJW-314/images/dn0621zay-button-hover-find-out.svg);
+    /*background-image: url(dn0621zay-button-hover-find-out.svg);*/
+    background-image: url("data:image/svg+xml,%3Csvg width='165' height='48' viewBox='0 0 165 48' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect opacity='0.2' x='5' y='6' width='154' height='36' fill='%231A73E8'/%3E%3Cline x1='5.5' y1='42' x2='5.5' y2='6' stroke='%238AB4F8'/%3E%3Cline x1='158.5' y1='42' x2='158.5' y2='6' stroke='%238AB4F8'/%3E%3Cline x1='159' y1='42.5' x2='5' y2='42.5' stroke='%238AB4F8'/%3E%3Cline x1='159' y1='6.5' x2='5' y2='6.5' stroke='%238AB4F8'/%3E%3C/svg%3E%0A");
     transition: 0.2s;
 }
 
 .Seventeen .casestudy-link-container .retake {
-    background-image: url(https://lp.cloudplatformonline.com/rs/808-GJW-314/images/dn0621zay-retake-assessment-dt-static.svg);
+    /*background-image: url(dn0621zay-retake-assessment-dt-static.svg);*/
+    background-image: url("data:image/svg+xml,%3Csvg width='182' height='48' viewBox='0 0 182 48' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cline opacity='0.8' x1='5.5' y1='48' x2='5.5' y2='-1.90443e-08' stroke='%234285F4'/%3E%3Cline opacity='0.8' x1='175.5' y1='48' x2='175.5' y2='1.90443e-08' stroke='%234285F4'/%3E%3Cline opacity='0.8' x1='182' y1='42.5' y2='42.5' stroke='%234285F4'/%3E%3Cline opacity='0.8' x1='182' y1='6.5' y2='6.5' stroke='%234285F4'/%3E%3C/svg%3E%0A");
     color: #ffffff;
     display: inline-block;
     font-family: 'Google Sans';
@@ -4400,7 +4416,8 @@ line-height: 29px;
 }
 .Seventeen .casestudy-link-container .retake:hover,
 .Seventeen .casestudy-link-container .retake:active{
-    background-image: url(https://lp.cloudplatformonline.com/rs/808-GJW-314/images/dn0621zay-retake-assessment-dt-hover.svg);
+    /*background-image: url(dn0621zay-retake-assessment-dt-hover.svg);*/
+    background-image: url("data:image/svg+xml,%3Csvg width='182' height='48' viewBox='0 0 182 48' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect opacity='0.2' x='5' y='6' width='171' height='36' fill='%231A73E8'/%3E%3Cline x1='6.5' y1='42' x2='6.5' y2='6' stroke='%238AB4F8'/%3E%3Cline x1='175.5' y1='42' x2='175.5' y2='6' stroke='%238AB4F8'/%3E%3Cline x1='176' y1='42.5' x2='6' y2='42.5' stroke='%238AB4F8'/%3E%3Cline x1='176' y1='6.5' x2='6' y2='6.5' stroke='%238AB4F8'/%3E%3C/svg%3E%0A");
     transition: 0.2s;
 }
 
@@ -4439,7 +4456,7 @@ line-height: 29px;
         margin-top: 5px;
     }
 
-    .Seventeen .header-container img {
+    .Seventeen .header-container svg {
         margin-top: 10px;
     }
 } 
@@ -4526,7 +4543,8 @@ line-height: 29px;
     }
 
     .Seventeen .casestudy-text-container .download-container {
-        background-image: url(https://lp.cloudplatformonline.com/rs/808-GJW-314/images/dn0621zay-mobile-cta-container.svg);
+        /*background-image: url(dn0621zay-mobile-cta-container.svg);*/
+        background-image: url("data:image/svg+xml,%3Csvg width='299' height='100' viewBox='0 0 299 100' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M-10 0H199C254.228 0 299 44.7715 299 100V100H-10V0Z' fill='%231A73E8'/%3E%3C/svg%3E%0A");
         background-repeat: no-repeat;
         background-position-x: 0%;
         background-position-y: 14%;
@@ -4554,7 +4572,7 @@ line-height: 29px;
 
     }
 
-    .casestudy-text-container .download-container img {
+    .casestudy-text-container .download-container svg {
         position: absolute;
         top: 10px;
         left: 12px;
@@ -4610,7 +4628,8 @@ line-height: 29px;
     }
 
     .Seventeen .casestudy-link-container .retake {
-        background-image: url(https://lp.cloudplatformonline.com/rs/808-GJW-314/images/dn0621zay-replay-button-mobile.svg);
+        /*background-image: url(dn0621zay-replay-button-mobile.svg);*/
+        background-image: url("data:image/svg+xml,%3Csvg width='48' height='48' viewBox='0 0 48 48' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle cx='24' cy='24' r='24' fill='%23185ABC'/%3E%3Cpath d='M29.65 18.35C28.2 16.9 26.21 16 24 16C19.58 16 16.01 19.58 16.01 24C16.01 28.42 19.58 32 24 32C27.73 32 30.84 29.45 31.73 26H29.65C28.83 28.33 26.61 30 24 30C20.69 30 18 27.31 18 24C18 20.69 20.69 18 24 18C25.66 18 27.14 18.69 28.22 19.78L25 23H32V16L29.65 18.35Z' fill='white'/%3E%3C/svg%3E%0A");
         background-repeat: no-repeat;
         bottom: 15%;
         top: initial;
